working first tesT

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "A stream you can pull data from.",
   "main": "pullstream.js",
   "scripts": {
-    "test": "./node_modules/.bin/tap --stderr ./test/"
+    "test": "./node_modules/.bin/tap --stderr --timeout=5 ./test/"
   },
   "license": "MIT",
   "devDependencies": {
     "tap": "~0.3.0",
     "stream-buffers": "~0.2.3"
+  },
+  "dependencies": {
+    "over": "0.0.2"
   }
 }
