conver to nodeunit

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "A stream you can pull data from.",
   "main": "pullstream.js",
   "scripts": {
-    "test": "./node_modules/.bin/tap --stderr --timeout=5 ./test/"
+    "test": "./node_modules/.bin/nodeunit ./test/"
   },
   "license": "MIT",
   "devDependencies": {
-    "tap": "~0.3.0"
+    "nodeunit": "~0.7.4"
   },
   "dependencies": {
     "over": "0.0.2",
