make use of over defaults

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "nodeunit": "~0.7.4"
   },
   "dependencies": {
-    "over": "0.0.2",
-    "stream-buffers": "~0.2.3",
-    "pause-stream": "0.0.3"
+    "over": "~0.0.3",
+    "stream-buffers": "~0.2.3"
   }
 }
