--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "https://github.com/nearinfinity/node-pullstream.git"
   },
+  "keywords": [
+    "stream", "pull"
+  ],
   "devDependencies": {
     "nodeunit": "~0.7.4"
   },
