--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "over": "~0.0.5",
-    "readable-stream": "0.0.3"
+    "readable-stream": "0.0.3",
+    "setimmediate": "~1.0.1"
   }
 }
