Inherit from until-stream
Adds the ability to read() or pipe to a destination
stream until a given pattern is reached while remaining
a PassThrough stream

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "over": "~0.0.5",
-    "readable-stream": "~0.2.0",
+    "until-stream": "~0.2.1",
     "setimmediate": "~1.0.1"
   }
 }
