--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "over": "~0.0.5",
-    "until-stream": "~0.2.2",
+    "readable-stream": "~1.0.0",
     "setimmediate": "~1.0.1",
     "slice-stream": "0.0.0"
   }
