Lock the streams implementation to Streams2
Uses the readable-stream module, pinned at 1.0.x (Streams2) rather than
the node core stream module. See
http://www.nearform.com/nodecrunch/dont-use-nodes-core-stream-module for
more details.

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "dependencies": {
     "over": "^0.0.5",
-    "readable-stream": "^1.1.13",
+    "readable-stream": "~1.0.31",
     "setimmediate": "^1.0.2",
-    "slice-stream": "0.0.0"
+    "slice-stream": "^1.0.0"
   }
 }
