--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "pull"
   ],
   "devDependencies": {
-    "nodeunit": "^0.9.0",
-    "stream-buffers": "^0.2.5",
-    "async": "^0.9.0"
+    "nodeunit": ">= 0.9.0 < 1",
+    "stream-buffers": ">= 0.2.6 < 1",
+    "async": ">= 0.9.0 <"
   },
   "dependencies": {
-    "over": "^0.0.5",
+    "over": ">= 0.0.5 < 1",
     "readable-stream": "~1.0.31",
-    "setimmediate": "^1.0.2",
-    "slice-stream": "^1.0.0"
+    "setimmediate": ">= 1.0.2 < 2",
+    "slice-stream": ">= 1.0.0 < 2"
   }
 }
