--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "over": ">= 0.0.5 < 1",
-    "readable-stream": "~1.0.31",
+    "readable-stream": "^2.0.2",
     "slice-stream": ">= 1.0.0 < 2"
   }
 }
